--- a/public/products.html
+++ b/public/products.html
@@ -262,7 +262,7 @@
           <h1>헤어케어 · 스타일링 추천</h1>
           <p>지금 스타일에 바로 쓰기 좋은 헤어케어·스타일링 제품을 모아봤어요.</p>
         </div>
-        <div class="badge">추천 상품</div>
+        <div class="badge">추천<br>상품</div>
       </header>
 
       <!-- JS가 상품 카드를 자동으로 넣어줄 영역 -->
