--- a/public/products.html
+++ b/public/products.html
@@ -73,12 +73,15 @@
     }
 
     .badge {
-      padding: 6px 12px;
-      border-radius: 999px;
+      padding: 6px 10px;
+      border-radius: 14px;
       border: 1px solid rgba(148,163,255,0.7);
       font-size: 11px;
       background: rgba(15,23,42,0.9);
       box-shadow: 0 4px 14px rgba(15,23,42,0.7);
+      text-align: center;
+      line-height: 1.2;
+      display: inline-block;
     }
 
     .product-list {
